# awe-synth

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_TEST_RESULTS.md  CLAUDE.md  CONFIGURATION_SYSTEM.md  Cargo.toml  EMU8000_REFERENCE.md  ERROR_RECOVERY.md  MEMORY_MANAGEMENT.md  PROJECT_TODO.md  TESTING_ARCHITECTURE.md  WASM_EXPORTS.md  architecture_test.html  debug_version_info.html  index.html  large-soundfont-performance-test.js  package.json  performance-optimization-analysis.js  pnpm-lock.yaml  polyphonic-performance-profiler.js  run-performance-tests.js  test_refactored_architecture.js
docs/: TODO.md  (+14 more)
tests/: Cargo.toml  README.md  run_multizone_tests.rs  test_filter_performance  test_multi_soundfont  test_multi_zone_layering  test_multi_zone_synthesis  test_performance_baseline  test_polyphonic_performance  test_round_robin_selection  test_sample_loop_accuracy  test_soundfont_integration  test_synthesis_pipeline  test_velocity_crossfading
tests/integration/: audio_comparison_tests.rs  emu8000_parameter_validation_tests.rs  multizone_sample_layering_tests.rs  multizone_voice_effects_tests.rs  voice_system_pipeline_tests.rs
tests/src/: lib.rs
tests/src/audio/: basic_synthesis_tests.rs  interpolation_quality_tests.rs  midi_integration_tests.rs  mod.rs  multi_soundfont_tests.rs  multi_zone_layering_tests.rs  performance_baseline_tests.rs  polyphonic_performance_tests.rs  round_robin_tests.rs  sample_loop_tests.rs  sample_playback_tests.rs  (+5 more)
tests/unit/: effects_integration_tests.rs  emu8000_parameter_tests.rs  multizone_layering_tests.rs  multizone_voice_tests.rs
(+223 files in other folders)
